--- a/style.css
+++ b/style.css
@@ -102,6 +102,11 @@
 	height:auto;
 	}
 	
+	.pdf_cont{
+	width:100%;
+	height:90%;
+	}
+	
 	#fileProgress{
 		display:none;
 	}
@@ -127,8 +132,9 @@
 	position: absolute;
 	min-width:20%;
 	height:auto;
-	top:30%;
-	left:40%;
+	top:10%;
+	left: 50%;
+	transform: translateX(-50%);
 	background-color: #f1f1f1;
 	text-align: center;
 	border: 1px solid #d3d3d3;
