--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
      display: grid;
      grid-template-rows: auto minmax(0, 1fr);
      grid-template-columns: 100%;
-     height: 99vh;
+     height: 97vh;
+	 grid-gap: 1vh;
  }
 
  #main {
@@ -23,17 +24,18 @@
      grid-gap: 1%;
  }
  
- @media screen and (max-width: 600px) {
-	 #main {
-		 display: none;
-		 grid-template-columns: 0% 100%;
-	 }	 
- }	 
+ 
 
  #peerDeets {
      display: none;
  }
-
+ #conninfo{
+	 display: none; 
+ }
+ 
+ #menuwrapper{
+	 display:none;
+ }
  #burger {
      width: 4vh;
      height: auto;
@@ -43,7 +45,7 @@
 
  #topbar {
      display: grid;
-     grid-template-columns: 19% 80%;
+     grid-template-columns: minmax(0, 1fr) auto;
      grid-gap: 1%;
  }
 
@@ -53,40 +55,41 @@
  }
 
  #menu {
-     position: absolute;
-     left: 3vh;
-     margin-top: 0px;
-     border: .1vh solid;
-     width: auto;
-     list-style: none;
-     padding-left: 0vh;
-     display: none;
-     background-color: white;
+	 padding:0;
+	 margin:0px;
+	 list-style-type: none;
  }
 
-#menu_vid {
-     display: none;
+ #menu > li {
+  display: block;
+  text-align: center;
+  float: left;
+  padding: 1vh;
+  margin: 0vh 0.5vh;
+  color: white;
+  background-color: #2196F3;
+  border-radius: 1vh;
+  cursor: pointer;
+}
+
+ #menu > li:hover {
+  color: black;
  }
  
- .menuItem {
-     padding: 0.5vh 2vh 0.5vh 1vh;
-     border: .1vh solid;
+  label {
+	 cursor: inherit;
  }
 
- .menuItem:hover {
-     color: white;
-     cursor: pointer;
-     background-color: skyBlue;
+ #menu_vid {
+     display: none;
  }
 
+ 
  #mopener {
      display: none;
  }
 
- label,
- input:checked+#menu {
-     display: block;
- }
+
 
  video {
      width: 100%;
@@ -99,7 +102,7 @@
  }
 
 
- input[type="file"] {
+ input[type="file"]{
      display: none;
  }
 
@@ -108,22 +111,25 @@
      height: 90%;
  }
 
- #fileProgress {
-     display: none;
- }
-
- #fileText {
-     display: none;
- }
-
  .hdwrp {
-     background-color: #2196F3;
-     display: flex;
-     margin-bottom: .25vh;
+     display: flex;     
+	 background-color: #2196F3;
+     margin-bottom: .0125vh;
+	 cursor: grab;
+	 align-items: center;
  }
-
+	
+ .hdwrp:active {
+	 cursor: grabbing;	 
+ }
+ 
+ .dragheader {
+     flex: 9;
+     padding: .5vh;
+     color: #fff;
+ }
  .closer {
-     padding: 1vh;
+     padding: .5vh;
      flex: 1;
      color: black;
  }
@@ -147,13 +153,6 @@
      overflow: auto;
  }
 
- .dragheader {
-     flex: 9;
-     padding: 1vh;
-     cursor: move;
-     color: #fff;
- }
-
  #msgwrap {
      display: none;
      grid-template-rows: auto minmax(0, 1fr) auto;
@@ -161,23 +160,20 @@
 	 right:1vw;
      border: .125vh solid;
      width: 20%;
-     height: 88%;
-     top: 10%;
+     height: 90%;
      background-color: #f1f1f1;
      overflow: auto;
 	 resize: both; 
  }
  
-#msghdwrp {
-     background-color: #2196F3;
-     margin-bottom: .25vh;
- }
+ #msghdwrp {
+	 justify-content: center;
+	}
  
 #msgdraghead {
-     padding: 1vh;
-     cursor: move;
-     color: #fff;
-	 text-align: center;
+    color: #fff;
+	text-align: center;
+	padding: .5vh;
  }
  
  #messageArea {
@@ -196,7 +192,6 @@
  #sendMessageBox {
      width: 100%;
  }
-
  .conf_btn {
      font-size: 120%;
      padding: 1vh;
@@ -212,3 +207,205 @@
  .reject_stream {
      background-color: red;
  }
+ 
+ .drawn{
+	 display:block;
+ }
+ 
+  .deleted{
+	 display:none;
+ }
+ 
+ /*start drawing css */
+ 
+ #draw_wrapper {
+    height: 90%
+}
+
+#bkg {
+    position: absolute;
+    height: 90%;
+    width: 99%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+#draw_wrapper > canvas {
+    position: absolute;
+}
+
+#cnv_btns {
+    display:inline-grid;
+	grid-template-rows: auto auto;
+	grid-template-columns: auto auto auto auto auto auto auto;
+}
+
+#cnv_cntrls {
+    position: absolute;
+    background-color: white;
+    z-index: 9999999999999999;
+    display: inline-flex;
+    border-width: 0.125vw 0.125vw 0.125vw 0;
+    border-style: solid;
+    margin-top: 0.25vh;
+	font-size: 80%;
+}
+
+#cnv_cntrls>div {
+    padding: 0.5vw;
+    border-left: 0.125vw solid;
+}
+
+.dr_ctrl_inf {
+	margin-bottom: 0.25vh;
+
+}
+
+#minicloser {
+    position: relative;
+    top: 0;
+    right: 0;
+    background-color: red;
+    color: white;
+    padding: 0 0.25vh 0.25vh;
+    align-self: flex-start;
+    cursor: default;
+    font-size: 100%;
+    line-height: 100%;
+    font-weight: bold;
+}
+
+#minicloser:hover {
+    color: black;
+}
+
+.visible {
+    visibility: visible;
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+.block {
+    display: block;
+}
+
+.none {
+    display: none;
+}
+
+#txtwrp {
+    position: absolute;
+    z-index: 999999999999999;
+    display: none;
+    grid-template-columns: auto auto;
+    grid-gap: 0.125vh;
+}
+
+#txtinput {
+    grid-row: 1 / 3;
+    align-self: end;
+    min-width: 10px;
+    vertical-align: text-bottom;
+}
+
+#txtsave {
+    background-color: green;
+}
+
+#txtdelete {
+    background-color: red;
+    display: flex;
+}
+
+.txtctrl {
+    align-self: start;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    padding: 0 0.25vh;
+    cursor: default;
+    margin: 0.125vh;
+}
+
+.txtctrl:hover {
+    color: black;
+}
+
+.ssfont {
+    font-family: sans-serif;
+}
+
+#sfont {
+    font-family: serif;
+}
+
+#crsfont {
+    font-family: cursive;
+}
+
+#monfont {
+    font-family: monospace;
+}
+
+#fntfont {
+    font-family: fantasy;
+}
+
+.fntdef {
+    font-size: 30px;
+}
+
+#fntsml {
+    font-size: 15px;
+}
+
+#fntlg {
+    font-size: 60px;
+}
+
+#fntxl {
+    font-size: 120px;
+}
+
+ @media screen and (max-width: 600px) {
+	#msgwrap {
+     width: 98%;		
+	}
+	 label,
+ input:checked+#menu {
+     display: block;
+ }
+	
+	#burger{
+		display:inline;
+	}
+	
+	#menu {
+	top: 3vh;
+	display: none;
+	position: absolute;
+	left: 2vh;
+	z-index: 9999999999999999;
+	}
+	
+	#menu > li{
+		float:none;
+	}
+	
+	 .menuItem {
+		 padding: 0.5vh 2vh 0.5vh 1vh;
+		 border: .1vh solid;
+	 }
+	#cnv_btns {
+		grid-auto-flow: column;
+		grid-template-columns: auto auto;
+		grid-template-rows: auto auto auto auto auto auto auto;
+	}
+	#cnv_btns > button{
+		width:100%;
+	}
+ }	
